src/css/main.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@import 'fonts/montserrat.css';
@import 'fonts/source-sans-pro.css';
@import 'fonts/source-code-pro.css';

:root {
  --ifm-color-primary: #892ca0;
  --ifm-color-primary-darkest: #5f246b;
  --ifm-color-primary-light: #bd58dd;
  --ifm-color-primary-lightest: #e3b4f3;
  --ifm-code-fonts-size: 95%;
  --docusaurus-highlighted-code-line-bg: rgba(43, 39, 53, 0.1);
}

/* for readability concerns, you should choose a lighter palette in dark mode. */
[data-theme='dark'] {
  --ifm-color-primary: #893ca0;
  --ifm-color-primary-darkest: #6f246b;
  --ifm-color-primary-light: #bd59dd;
  --ifm-color-primary-lightest: #e4b4f3;
  --docusaurus-highlighted-code-line-bg: rgba(44, 39, 53, 0.3);
}
.navbar {
  box-shadow: none;
  @apply bg-gradient-to-r from-blue-500 to-blue-700 dark:from-purple-700 dark:to-blue-900;
}

.navbar__title,
.navbar__link,
.clean-btn {
  @apply text-white dark:text-gray-50;
}

/* -------------- */
/* Font Configuration */
/* ------------- */
@layer base {
  /* headings */
  h1,
  h2,
  h3,
  h4,
  h5 {
    @apply font-display dark:text-gray-300;
  }
  /* main text */
  a,
  p,
  dl,
  dt,
  dd,
  ol,
  figcaption,
  blockquote {
    @apply font-text text-lg dark:text-gray-100 lg:text-xl;
  }

  /* monospace */
  code,
  pre {
    @apply font-mono text-lg dark:text-gray-100 lg:text-xl;
  }
}

/* headings size and weight */
h1 {
  @apply text-4xl font-bold lg:text-5xl;
}
h2 {
  @apply text-2xl font-bold lg:text-3xl;
}
h3 {
  @apply text-xl font-semibold lg:text-2xl;
}
h4 {
  @apply text-lg font-semibold lg:text-xl;
}
h5 {
  @apply text-base font-semibold lg:text-lg;
}

